2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix rcairo's source path.

2007-07-13  Guillaume Cottenceau

	* src/rbvte-terminal.c: replace RTEST uses by RVAL2CBOOL

2007-06-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbvte-terminal.c: used RSTRING_LEN/RSTRING_PTR instead of
	RSTRING()->len/ptr to support ruby 1.9.

2006-06-17  Masao Mutoh <mutoh@highway.ne.jp>

	* sample/*.rb: code cleanup.

2006-05-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbvte.h: added extern modifier.

2006-05-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbvte-terminal.c (term_set_color_highlight,
	term_set_word_chars): accepted nil.
	(term_get_text, term_get_text_range, term_match_check): fixed
	memory leak.
	(word_char?): fixed typo.

2006-05-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbvte-terminal.c (term_set_color_cursor): accepted nil.

	* README: required 0.12.1 or later.
	* extconf.rb: ditto.

2006-05-17  Kouhei Sutou  <kou@cozmixng.org>

	* .: imported.