@@ -22,8 +22,10 @@ add_depend_package("glib2", "glib/src", TOPDIR)
 add_depend_package("gtk2", "gtk/src", TOPDIR)
 add_depend_package("atk", "atk/src", TOPDIR)
 
-make_version_header("VTE", PACKAGE_ID)
+unless have_macro("VTE_CHECK_VERSION", ["vte/vte.h"])
+  make_version_header("VTE", PACKAGE_ID)
+  create_pkg_config_file('VTE', 'src/rbvteversion.h', 'vte-ruby.pc')
+end
 
 create_makefile_at_srcdir(PACKAGE_NAME, SRCDIR, "-DRUBY_VTE_COMPILATION")
-create_pkg_config_file('VTE', 'src/rbvteversion.h', 'vte-ruby.pc')
 create_top_makefile
